@@ -1,18 +1,12 @@
 \name{is.na-methods}
-\title{is.na(), is.{in}finite() Methods for 'Matrix' Objects}
+\title{is.na(), is.finite() Methods for 'Matrix' Objects}
 \docType{methods}
 %
 \alias{is.na-methods}
-%
-\alias{anyNA,ddenseMatrix-method}
-\alias{anyNA,diagonalMatrix-method}
-\alias{anyNA,dsparseMatrix-method}
-\alias{anyNA,indMatrix-method}
-\alias{anyNA,ldenseMatrix-method}
-\alias{anyNA,lsparseMatrix-method}
-\alias{anyNA,nMatrix-method}
-\alias{anyNA,nsparseVector-method}
-\alias{anyNA,sparseVector-method}
+\alias{is.nan-methods}
+\alias{is.finite-methods}
+\alias{is.infinite-methods}
+\alias{anyNA-methods}
 %
 \alias{is.na,abIndex-method}
 \alias{is.na,dgeMatrix-method}
@@ -32,6 +26,19 @@
 \alias{is.na,nMatrix-method}
 \alias{is.na,nsparseVector-method}
 \alias{is.na,sparseVector-method}
+%
+\alias{is.nan,ddiMatrix-method}
+\alias{is.nan,dgeMatrix-method}
+\alias{is.nan,dspMatrix-method}
+\alias{is.nan,dsparseMatrix-method}
+\alias{is.nan,dsyMatrix-method}
+\alias{is.nan,dtpMatrix-method}
+\alias{is.nan,dtrMatrix-method}
+\alias{is.nan,indMatrix-method}
+\alias{is.nan,lMatrix-method}
+\alias{is.nan,nMatrix-method}
+\alias{is.nan,nsparseVector-method}
+\alias{is.nan,sparseVector-method}
 %
 \alias{is.finite,abIndex-method}
 \alias{is.finite,dgeMatrix-method}
@@ -66,61 +73,62 @@
 \alias{is.infinite,nsparseVector-method}
 \alias{is.infinite,sparseVector-method}
 %
+\alias{anyNA,ddenseMatrix-method}
+\alias{anyNA,diagonalMatrix-method}
+\alias{anyNA,dsparseMatrix-method}
+\alias{anyNA,indMatrix-method}
+\alias{anyNA,ldenseMatrix-method}
+\alias{anyNA,lsparseMatrix-method}
+\alias{anyNA,nMatrix-method}
+\alias{anyNA,nsparseVector-method}
+\alias{anyNA,sparseVector-method}
+%
 \description{
-  Methods for functions \code{\link{is.na}()}, \code{\link{is.finite}()},
-  and \code{\link{is.infinite}()} for all Matrix objects
-  (those extending class \code{\linkS4class{Matrix}}):
-
-  \describe{
-    \item{x = "denseMatrix"}{returns an \code{\linkS4class{nMatrix}}
-      of the same dimension as \code{x}, with TRUE whenever \code{x}
-      is \code{\link{NA}}, finite, or infinite, respectively.}
-    \item{x = "sparseMatrix"}{ditto.}
-  }
+  Methods for generic functions \code{\link{is.na}()},
+  \code{\link{is.nan}()}, \code{\link{is.finite}()},
+  \code{\link{is.infinite}()}, and \code{\link{anyNA}()},
+  for objects inheriting from virtual class
+  \code{\linkS4class{Matrix}} or \code{\linkS4class{sparseVector}}.
 }
 \usage{
-\S4method{is.na}{lsparseMatrix}(x)
+\S4method{is.na}{dsparseMatrix}(x)
+\S4method{is.nan}{dsparseMatrix}(x)
 \S4method{is.finite}{dsparseMatrix}(x)
-\S4method{is.infinite}{dgeMatrix}(x)
-## ...
-## and for other classes
-
-\S4method{anyNA}{nMatrix}(x)
+\S4method{is.infinite}{dsparseMatrix}(x)
+\S4method{anyNA}{dsparseMatrix}(x)
 ## ...
 ## and for other classes
 }
 \arguments{
-  \item{x}{sparse or dense matrix or sparse vector (here; any \R object
-    in general).}
+  \item{x}{an \R object, here a sparse or dense matrix or vector.}
+}
+\value{
+  For \code{is.*()}, an \code{\linkS4class{nMatrix}} or
+  \code{\linkS4class{nsparseVector}} matching the dimensions
+  of \code{x} and specifying the positions in \code{x} of
+  (some subset of) \code{\link{NA}}, \code{\link{NaN}},
+  \code{\link{Inf}}, and \code{-Inf}.
+  For \code{anyNA}(), \code{TRUE} if \code{x} contains \code{NA}
+  or \code{NaN} and \code{FALSE} otherwise.
 }
 \seealso{
-  \code{\link{NA}}, \code{\link{is.na}};
-  \code{\link{is.finite}}, \code{\link{is.infinite}};
-  \code{\linkS4class{nMatrix}},
-  \code{\linkS4class{denseMatrix}}, \code{\linkS4class{sparseMatrix}}.
-
-  The \code{\linkS4class{sparseVector}} class.
+  \code{\link{NA}}, \code{\link{NaN}}, \code{\link{Inf}}
 }
 \examples{
-M <- Matrix(1:6, nrow=4, ncol=3,
-       dimnames = list(c("a", "b", "c", "d"), c("A", "B", "C")))
-stopifnot(all(!is.na(M)))
-M[2:3,2] <- NA
-is.na(M)
-if(exists("anyNA", mode="function"))
-anyNA(M)
+(M <- Matrix(1:6, nrow = 4, ncol = 3,
+             dimnames = list(letters[1:4], LETTERS[1:3])))
+stopifnot(!anyNA(M), !any(is.na(M)))
 
-A <- spMatrix(10,20, i = c(1,3:8),
-                     j = c(2,9,6:10),
-                     x = 7 * (1:7))
-stopifnot(all(!is.na(A)))
-%TODO stopifnot(all(!is.na(A)), !anyNA(A))
-A[2,3] <- A[1,2] <- A[5, 5:9] <- NA
-inA <- is.na(A)
-stopifnot(sum(inA) == 1+1+5)
-\dontshow{
-if(exists("anyNA", mode="function"))
-stopifnot(anyNA(M), anyNA(A))
-}% dont..
+M[2:3, 2] <- NA
+(inM <- is.na(M))
+stopifnot(anyNA(M), sum(inM) == 2)
+
+(A <- spMatrix(nrow = 10, ncol = 20,
+               i = c(1, 3:8), j = c(2, 9, 6:10), x = 7 * (1:7)))
+stopifnot(!anyNA(A), !any(is.na(A)))
+
+A[2, 3] <- A[1, 2] <- A[5, 5:9] <- NA
+(inA <- is.na(A))
+stopifnot(anyNA(A), sum(inA) == 1 + 1 + 5)
 }
 \keyword{methods}
